--- a/app/views/scams/new.html.erb
+++ b/app/views/scams/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Scam</h1>
+<h1>Analyse message</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', scams_path %>
+<%#= link_to 'Back', scams_path %>
